language/tests/bishop/compile_fail/undefined_binder.rg
-- Copyright 2023 Stanford University, NVIDIA Corporation
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

-- fails-with:
-- undefined_binder.rg:25: variable '$isa' was used without being bound by a pattern matching
--   target : processors[isa=$isa];
--                         ^

import "bishop"

mapper

task {
  target : processors[isa=$isa];
}

end
